# bdd-rs

./: .gitignore  Cargo.toml  README.adoc
ananke-bdd/: Cargo.toml
ananke-bdd/benches/: bdd_cache.rs  cache_micro.rs
ananke-bdd/examples/: cache-stats.rs  dot-visualization.rs  queens.rs  reordering.rs  simple.rs
ananke-bdd/src/: bdd.rs  debug.rs  dot.rs  eval.rs  lib.rs  paths.rs  raw.rs  reference.rs  reorder.rs  types.rs
ananke-bdd/src/cache/: direct_mapped.rs  mod.rs  set_associative.rs
ananke-sdd/: Cargo.toml  README.md
ananke-sdd/docs/: theory.md
ananke-sdd/examples/: bounded_model_checking.rs  circuit_analysis.rs  file_io.rs  knowledge_compilation.rs  manual.rs  probabilistic.rs  queens.rs  sdd_vs_bdd.rs  simple.rs  vtree.rs
ananke-sdd/src/: dot.rs  io.rs  lib.rs  literal.rs  manager.rs  sdd.rs  vtree.rs
ananke-sdd/tests/: core.rs  debug_trace.rs
ananke-zdd/: Cargo.toml  README.md
ananke-zdd/docs/: examples.md  implementation.md  index.md  introduction.md  operations.md  quickref.md  theory.md
ananke-zdd/examples/: combinations.rs  dot-visualization.rs  queens.rs  simple.rs
ananke-zdd/src/: cache.rs  dot.rs  iter.rs  lib.rs  node.rs  reference.rs  subtable.rs  types.rs  zdd.rs
examples/abstract-interpretation/: Cargo.toml  README.md
examples/abstract-interpretation/docs/: architecture.md  bdd_control_domain.md  benchmarks.md  examples.md  implementation.md  theory.md
examples/abstract-interpretation/examples/: automata_analysis.rs  combined_analysis.rs  constant_propagation.rs  dynamic_type_check.rs  input_validation.rs  loop_optimization.rs  mode_controller.rs  pointsto_example.rs  protocol_fsm.rs  realistic_programs.rs  regex_analysis.rs  sdd_control.rs  sdd_path_interval.rs  security_and_normalization.rs  sign_analysis.rs  simple_loops.rs  string_analysis.rs  string_concatenation.rs  string_constant_and_length.rs  string_prefix_and_charset.rs  string_suffix_and_inclusion.rs  traffic_light.rs  transfer_example.rs
examples/abstract-interpretation/guide/: README.md  main.typ  theme.typ
examples/abstract-interpretation/guide/chapters/: preface.typ
examples/abstract-interpretation/guide/chapters/part1_introduction/: 00_prologue.typ  01_abstraction.typ  02_control_flow.typ  03_bdds.typ  04_bdd_programming.typ  05_combining.typ  06_symbolic_executor.typ
examples/abstract-interpretation/guide/chapters/part2_deep_dive/: 07_lattice_theory.typ  08_fixpoint_algorithms.typ  09_advanced_galois.typ  10_approximation_theory.typ  10_domain_combinations.typ  11_bdd_path_sensitivity.typ  11_domain_combinations.typ  12_bdd_path_sensitivity.typ  13_points_to_and_types.typ  13_string_and_automata_domains.typ  14_points_to_and_types.typ  15_precision_techniques.typ
examples/abstract-interpretation/guide/chapters/part3_applications/: 15_security_analysis.typ  16_interprocedural_analysis.typ  16_security_analysis.typ  17_ai_guided.typ  17_interprocedural_analysis.typ  18_case_studies.typ  18_performance.typ  19_ai_guided.typ  20_case_studies.typ  21_debugging.typ
examples/abstract-interpretation/guide/code-examples/: Cargo.toml  README.md
examples/abstract-interpretation/guide/code-examples/bdd_advanced/: quantification.rs  variable_ordering.rs
examples/abstract-interpretation/guide/code-examples/bdd_fundamentals/: basics.rs  boolean_ops.rs  manager_demo.rs
examples/abstract-interpretation/guide/code-examples/chapter01/: interval_domain.rs  sign_domain.rs
examples/abstract-interpretation/guide/code-examples/chapter02/: cfg_builder.rs
examples/abstract-interpretation/guide/code-examples/chapter03/: bdd_basics.rs  boolean_operations.rs
examples/abstract-interpretation/guide/code-examples/chapter04/: bdd_manager_demo.rs  variable_ordering.rs
examples/abstract-interpretation/guide/code-examples/chapter05/: sign_with_bdd.rs
examples/abstract-interpretation/guide/code-examples/chapter06/: path_exploration.rs  symbolic_executor.rs
examples/abstract-interpretation/guide/code-examples/domains/: combined.rs  interval.rs  sign.rs
examples/abstract-interpretation/guide/code-examples/integration/: sign_with_bdd.rs
examples/abstract-interpretation/paper/: main.typ  refs.yaml  theme.typ
examples/abstract-interpretation/src/: automata.rs  bdd_control.rs  congruence.rs  constant.rs  domain.rs  expr.rs  fixpoint.rs  generic_product.rs  interval.rs  lib.rs  numeric.rs  pointsto.rs  product.rs  sdd_control.rs  sign.rs  string_domain.rs  transfer.rs  type_domain.rs
examples/abstract-interpretation/tests/: domain_integration.rs
examples/boolean-functions/: Cargo.toml  README.md
examples/boolean-functions/docs/: bdd_sizes.md  statistical_analysis.md  theory.md
examples/boolean-functions/examples/: exhaustive.rs  explore.rs  monte_carlo.rs  statistics.rs
examples/boolean-functions/src/: analysis.rs  function.rs  lib.rs  sampling.rs  stats.rs  viz.rs
examples/cig/: Cargo.toml
examples/cig/examples/: analysis.rs  basic.rs  circuits.rs  comparison.rs  decomposition.rs  documentation.rs  profiling.rs
examples/cig/src/: analysis.rs  builder.rs  cig.rs  display.rs  interaction.rs  lib.rs  operations.rs  partition.rs  separability.rs  tests.rs  truth_table.rs  variable.rs
examples/expr-space/: Cargo.toml  README.md
examples/expr-space/examples/: canonical.rs  enumerate.rs
examples/expr-space/src/: ast.rs  builder.rs  encoding.rs  eval.rs  filters.rs  lib.rs  main.rs
examples/model_checking/: Cargo.toml  THEORY.md
examples/model_checking/docs/: theory.typ
examples/model_checking/src/: ctl.rs  lib.rs  transition.rs
examples/sdd/: Cargo.toml  README.md
examples/sdd/docs/: applications.md
examples/sdd/examples/: bounded_model_checking.rs  circuit_analysis.rs  file_io.rs  knowledge_compilation.rs  manual.rs  probabilistic.rs  queens.rs  sdd-simple.rs  sdd_vs_bdd.rs  simple.rs  vtree.rs
examples/sdd/examples/abstract-interpretation/: Cargo.toml  README.md
examples/sdd/examples/abstract-interpretation/examples/: simple.rs  (+2 more)
examples/sdd/src/: dot.rs  io.rs  lib.rs  literal.rs  manager.rs
examples/sdd/tests/: core.rs  debug_trace.rs
(+177 files in other folders)
