[package]
name = "bdd-rs"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
description = "Binary Decision Diagrams for Rust"
edition = "2021"
license = "MIT"
readme = "README.adoc"
repository = "https://github.com/Lipen/bdd-rs"

[workspace]
members = [
    "examples/eda",
]

[dependencies]
log = "0.4"
num-bigint = "0.4"

[dev-dependencies]
color-eyre = "0.6"
simplelog = "0.12"
test-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
