[package]
name = "bdd-rs"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
description = "Binary Decision Diagrams for Rust"
edition = "2021"
license = "MIT"
readme = "README.adoc"
repository = "https://github.com/Lipen/bdd-rs"

[workspace]
members = [
    "examples/eda",
    "examples/feature-model",
    "examples/symbolic-execution",
    "examples/model-checking",
    "examples/abstract-interpretation",
    "examples/tbdd-pbt",
    "examples/boolean-functions",
    "examples/sdd",
]

[dependencies]
hashbrown = "0.16"
log = "0.4"
num-bigint = "0.4"

[dev-dependencies]
color-eyre = "0.6"
simplelog = "0.12"
test-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.9"
rand_chacha = "0.9"

[[bench]]
name = "cache_micro"
harness = false

[[bench]]
name = "bdd_cache"
harness = false
