[workspace]
resolver = "2"
members = [
    "ananke-bdd",
    "ananke-sdd",
    "examples/eda",
    "examples/feature-model",
    "examples/symbolic-execution",
    "examples/model-checking",
    "examples/abstract-interpretation",
    "examples/tbdd-pbt",
    "examples/boolean-functions",
    "examples/expr-space",
]

[workspace.package]
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.adoc"
repository = "https://github.com/Lipen/bdd-rs"
