[package]
name = "ananke-bdd"
version = "0.1.0"
description = "Binary Decision Diagrams for Rust"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
hashbrown = "0.16"
log = "0.4"
num-bigint = "0.4"

[dev-dependencies]
color-eyre = "0.6"
simplelog = "0.12"
test-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.9"
rand_chacha = "0.9"

[[bench]]
name = "cache_micro"
harness = false

[[bench]]
name = "bdd_cache"
harness = false
