[package]
name = "ananke-zdd"
version = "0.1.0"
description = "Zero-Suppressed Decision Diagrams for Rust"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
log = "0.4"
num-bigint = "0.4"

[dev-dependencies]
color-eyre = "0.6"
simplelog = "0.12"
test-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
