[package]
name = "abstract-interpretation"
version = "0.1.0"
edition = "2021"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
description = "BDD-guided abstract interpretation framework"

[dependencies]
ananke-bdd = { path = "../../ananke-bdd" }
ananke-sdd = { path = "../../ananke-sdd" }
log = "0.4"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
simplelog = "0.12"

[dev-dependencies]
regex = "1.12"
