[package]
name = "cig"
version = "0.1.0"
edition = "2021"
description = "Canonical Interaction Graph - a semantic-structural canonical representation of Boolean functions"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
license = "MIT"

[dependencies]
# For BDD construction and manipulation (optional, for comparison)
ananke-bdd = { path = "../../ananke-bdd" }
# For arbitrary precision integers (truth tables)
num-bigint = "0.4"
num-traits = "0.2"
# For efficient bit manipulation
bitvec = "1.0"
# For hash-consing
rustc-hash = "2.0"
# For logging
log = "0.4"

[dev-dependencies]
# For pretty output in examples
env_logger = "0.11"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "analysis"
path = "examples/analysis.rs"

[[example]]
name = "decomposition"
path = "examples/decomposition.rs"

[[example]]
name = "comparison"
path = "examples/comparison.rs"
