[package]
name = "cig"
version = "0.1.0"
edition = "2021"
description = "Canonical Interaction Graph - a semantic-structural canonical representation of Boolean functions"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
license = "MIT"

[dependencies]
ananke-bdd = { path = "../../ananke-bdd" }
num-bigint = "0.4"
num-traits = "0.2"
bitvec = "1.0"
rustc-hash = "2.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
