[package]
name = "guide-code-examples"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bdd-rs = { path = "../../../../" }
num-bigint = "0.4"

[[example]]
name = "ch01_sign_domain"
path = "chapter01/sign_domain.rs"

[[example]]
name = "ch01_interval_domain"
path = "chapter01/interval_domain.rs"

[[example]]
name = "ch02_cfg_builder"
path = "chapter02/cfg_builder.rs"

[[example]]
name = "ch03_bdd_basics"
path = "chapter03/bdd_basics.rs"

[[example]]
name = "ch03_boolean_ops"
path = "chapter03/boolean_operations.rs"

[[example]]
name = "ch04_bdd_manager"
path = "chapter04/bdd_manager_demo.rs"

[[example]]
name = "ch04_quantification"
path = "chapter04/quantification.rs"

[[example]]
name = "ch04_variable_ordering"
path = "chapter04/variable_ordering.rs"

[[example]]
name = "ch05_combined_domain"
path = "chapter05/combined_domain.rs"

[[example]]
name = "ch05_sign_with_bdd"
path = "chapter05/sign_with_bdd.rs"

[[example]]
name = "ch06_symbolic_executor"
path = "chapter06/symbolic_executor.rs"

[[example]]
name = "ch06_path_exploration"
path = "chapter06/path_exploration.rs"

[dev-dependencies]
