[package]
name = "guide-code-examples"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bdd-rs = { path = "../../../../" }
num-bigint = "0.4"

# ============================================================================
# Abstract Domain Implementations
# ============================================================================

[[example]]
name = "sign_domain"
path = "domains/sign.rs"

[[example]]
name = "interval_domain"
path = "domains/interval.rs"

[[example]]
name = "combined_domain"
path = "domains/combined.rs"

# ============================================================================
# Control Flow Analysis
# ============================================================================

[[example]]
name = "cfg_builder"
path = "control_flow/cfg_builder.rs"

# ============================================================================
# BDD Fundamentals
# ============================================================================

[[example]]
name = "bdd_basics"
path = "bdd_fundamentals/basics.rs"

[[example]]
name = "bdd_boolean_ops"
path = "bdd_fundamentals/boolean_ops.rs"

[[example]]
name = "bdd_manager"
path = "bdd_fundamentals/manager_demo.rs"

# ============================================================================
# Advanced BDD Techniques
# ============================================================================

[[example]]
name = "bdd_quantification"
path = "bdd_advanced/quantification.rs"

[[example]]
name = "bdd_variable_ordering"
path = "bdd_advanced/variable_ordering.rs"

# ============================================================================
# Integration: BDDs with Abstract Domains
# ============================================================================

[[example]]
name = "sign_with_bdd"
path = "integration/sign_with_bdd.rs"

# ============================================================================
# Symbolic Execution
# ============================================================================

[[example]]
name = "symbolic_executor"
path = "symbolic_execution/executor.rs"

[[example]]
name = "path_exploration"
path = "symbolic_execution/path_exploration.rs"

[[example]]
name = "verifier"
path = "symbolic_execution/verifier.rs"

[dev-dependencies]
